<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:paddingBottom="64dp" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_local"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:paddingBottom="8dp" />

        <CheckBox
            android:id="@+id/backup_configurations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/backup_groups_and_configurations"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <CheckBox
            android:id="@+id/backup_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/backup_rules"
            android:textAppearance="?attr/textAppearanceSubtitle2" />


        <CheckBox
            android:id="@+id/backup_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/backup_settings"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <Button
            android:id="@+id/action_export"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_export"
            android:textColor="?whiteOrTextPrimary" />

        <Button
            android:id="@+id/action_share"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="?whiteOrTextPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/backup_summary"
            android:textColor="?android:textColorTertiary" />

        <Button
            android:id="@+id/action_import_file"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_import_file"
            android:textColor="?whiteOrTextPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_webdav"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/webdav_settings"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webdav_settings"
            android:textColor="?whiteOrTextPrimary" />

        <Button
            android:id="@+id/backup_to_webdav"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_to_webdav"
            android:textColor="?whiteOrTextPrimary" />

        <Button
            android:id="@+id/restore_from_webdav"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore_from_webdav"
            android:textColor="?whiteOrTextPrimary" />

        <Button
            android:id="@+id/reset_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/reset_settings"
            android:textColor="?colorError" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
