<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="webdavServer"
        android:title="@string/webdav_server"
        android:icon="@drawable/ic_baseline_link_24"
        android:singleLine="true"
        android:summary="%s" />

    <EditTextPreference
        android:key="webdavUsername"
        android:title="@string/webdav_username"
        android:icon="@drawable/ic_baseline_person_24"
        android:singleLine="true"
        android:summary="%s" />

    <EditTextPreference
        android:key="webdavPassword"
        android:title="@string/webdav_password"
        android:icon="@drawable/ic_baseline_lock_24"
        android:singleLine="true"
        app:dialogLayout="@layout/layout_password_dialog" />

    <EditTextPreference
        android:key="webdavPath"
        android:title="@string/webdav_path"
        android:icon="@drawable/ic_baseline_rule_folder_24"
        android:singleLine="true"
        android:defaultValue="Exclave"
        android:summary="%s" />

    <Preference
        android:key="webdavTest"
        android:title="@string/webdav_test"
        android:icon="@drawable/ic_baseline_speed_24" />

</PreferenceScreen>
